# otcfmasr

./: .gitignore  .null-ls_814785_analysis.py  analysis.py  baseline.py  baseline_wav2vec2.py  data_prepare.py  encode_dataset.py  get_wspr_emb.py  main.py  pyproject.toml  train.py  train_wav2vec2_cfm.py  train_whisper_cfm.py  utils_wspr.py
hparams/: baseline.yaml  baseline_wav2vec2.yaml  baseline_whisper.yaml  hpopt.yaml  orion.yaml  train.yaml  train_wav2vec2.yaml  train_whisper.yaml
hparams/orion/: orion.yaml
hparams/xps/: paired_prelim.yaml
otcfmasr/: decoding.py
slurm/: hpopt_prelim.mima.sh  paired_prelim.bess.sh  paired_prelim.stan.sh
utils/: transcribe.py
