[project]
name = "otcfmasr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper>=20240930",
    "scikit-learn>=1.6.1",
    "soundfile>=0.13.1",
    "speechbrain>=1.0.3",
    "torchcfm>=1.0.7",
    "transformers>=4.51.3",
    "umap-learn>=0.5.7",
    "wandb>=0.19.9",
]
